--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,297 @@
-.App {
-  text-align: center;
+* {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app_wrapper {
+  width: 100%;
+  overflow: visible;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-container {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.main-container.centered {
+  position: relative;
   display: flex;
+  height: 100%;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.navbar {
+  position: relative;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  backdrop-filter: blur(15px);
+  z-index: 100;
+}
+
+.navbar.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 15%);
+  z-index: 100;
+}
+
+.hero {
+  position: relative;
+  width: 100%;
+  height: 735px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.hero.active {
+  margin-top: 70px;
+}
+
+.margin-top {
+  margin-top: 70px;
+}
+
+.global-btn {
+  padding: 12px 32px;
+  background-color: #1D2130;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 19px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.global-btn.second {
+  padding: 16px 32px;
+  background-color: #fff;
+  backdrop-filter: blur(40px);
+  color: #1D2130;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.global-btn.thrid {
+  padding: 16px 32px;
+  background-color: #70C174;
+  backdrop-filter: blur(40px);
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.global-subheading {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #1D2130;
+}
+
+.subheading-line {
+  width: 72px;
+  height: 2px;
+  background-color: #1D2130;
+}
+
+.global-subheading.second {
+  color: #fff;
+}
+
+.global-heading {
+  width: 607px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 58px;
+  color: #1D2130;
+}
+
+.global-heading.second {
+  color: #fff;
+  font-weight: 600;
+}
+
+.global-heading.thrid {
+  width: 100%;
+}
+
+.global-subtitle {
+  width: 608px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #525560;
+}
+
+.global-subtitle.second {
+  width: 280px;
+  color: #fff;
+  font-weight: 300;
+}
+
+.global-subtitle.third {
+  width: 606px;
+  color: #fff;
+  font-weight: 300;
+}
+
+.global-subtitle.width {
+  width: 496px;
+}
+
+.global-subtitle.width2 {
+  width: 488px;
+  color: #fff;
+}
+
+.scroll {
+  position: fixed;
+  top: auto;
+  left: auto;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50px;
+  height: 50px;
+  background-color: #1D2130;
+  border-radius: 100%;
+  cursor: pointer;
+  transform: translateX(100px);
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.scroll.show {
+  transform: translateX(0px);
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.popup {
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.6));
+}
+
+.navbar.second {
+  background-color: #EFF7F2;
+}
+
+.navbar.third {
+  background-color: #EBF0F9;
+  backdrop-filter: blur(15px);
+}
+
+.map-container {
+  width: 100%;
+  height: 448px;
+}
+
+.tab-state {
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.tab-state.tab-active {
+  display: flex;
+}
+
+.mobile-menu {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  z-index: 50;
+}
+
+.menu-wrap {
+  width: 300px;
+  height: auto;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+@media screen and (max-width: 991px) {
+  .global-subtitle.width {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 767px) {
+  .main-container.centered {
+    align-items: center;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
+  .global-heading {
+    width: 100%;
+    font-size: 38px;
+    line-height: 48px;
+  }
+
+  .global-subtitle {
+    width: 100%;
+  }
+
+  .global-subtitle.third {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .main-container.centered {
+    padding: 0 20px;
+  }
+
+  .hero {
+    height: 620px;
+  }
+
+  .subheading-line {
+    width: 42px;
+  }
+
+  .global-heading {
+    font-size: 32px;
+    line-height: 42px;
+  }
+
+  .mobile-menu {
+    top: 70px;
+    left: 0;
+    right: auto;
+  }
+
+  .menu-wrap {
+    width: 100%;
+    border-radius: 0;
+    box-shadow: rgb(33 35 38 / 10%) 0px 15px 20px -5px;
   }
 }
